<resources>

    <string name="app_name">Compass</string>
    <string name="title_activity_main">Compass</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_place">Edit place</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_place">Add place</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="invalid_form_alert">Form not filled correctly</string>
    <string name="menu_populate">Populate</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="color">Color</string>
    <string name="coordinates">Coordinates</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="show_selected">Show selected</string>
    <string name="location_error">
        Location unavailable - assuming Wroclaw, Poland (51N17E)
    </string>
    <string name="sensor_error">Required sensors not present</string>

</resources>